tests/snapshots/compiler_error_fixtures/deriving_multi_param_eq_e486.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/deriving_multi_param_eq_e486.flx
== compile ==
failed (compile)
== diagnostics ==
error[E486]: Underivable Class

`Eq` cannot be derived for `Pair`, which has more than one type parameter. Write the instance by hand.

  examples/compiler_errors/deriving_multi_param_eq_e486.flx:18:1
   |
18 | data Pair<a, b> { Pair(a, b) } deriving (Eq)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
