tests/snapshots/compiler_error_fixtures/kind_invalid_ctor_arity_e472.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/kind_invalid_ctor_arity_e472.flx
== compile ==
failed (compile)
== diagnostics ==
error[E472]: Type Constructor Arity Mismatch

Type `Box` expects 1 type argument(s), but 2 were given.

  examples/compiler_errors/kind_invalid_ctor_arity_e472.flx:5:16
  |
5 | fn take(value: Box<Int, String>) -> Int { 1 }
  |                ^^^^^^^^^^^^^^^^
== stdout ==
<not executed>
